# uavChampion

./: .gitignore  1.txt  Dockerfile  README.md  run.sh  setup.sh  setup_local.sh
src/VINS-Fusion/config/: fast_drone_250.yaml  fast_drone_uav.yaml  fast_drone_uav_mono.yaml  right.yaml  uav_left.yaml
src/VINS-Fusion/loop_fusion/: CMakeLists.txt  package.xml
src/VINS-Fusion/loop_fusion/src/: parameters.h  pose_graph_node.cpp
src/VINS-Fusion/vins_estimator/: CMakeLists.txt  bias.txt  package.xml  stamped_traj_estimate.txt
src/VINS-Fusion/vins_estimator/launch/: fast_drone_uav.launch  fast_drone_uav_mono.launch
src/VINS-Fusion/vins_estimator/src/: KITTIOdomTest.cpp  rosNodeTest.cpp
src/VINS-Fusion/vins_estimator/src/estimator/: estimator.cpp  feature_manager.cpp  parameters.cpp
src/VINS-Fusion/vins_estimator/src/utility/: visualization.cpp  (+1 more)
src/airsim_ros/include/: pd_position_controller_simple.h
src/airsim_ros/src/: pd_position_controller_simple.cpp
src/cv_bridge/: CMakeLists.txt  package.xml
src/planner/bspline_opt/src/: bspline_optimizer.cpp
src/planner/plan_manage/launch/: advanced_param_exp.xml  default.rviz  run_all.launch  single_run_in_exp.launch  single_run_in_uav.launch
src/planner/plan_manage/src/: ego_replan_fsm.cpp  planner_manager.cpp
src/realflight_modules/VINS-Fusion/config/: fast_drone_uav.yaml  fast_drone_uav_mono.yaml  left.yaml  uav_right.yaml
src/stereo2depth/: CMakeLists.txt  package.xml
src/stereo2depth/include/: kalman_filter.hpp  uavControl.hpp
src/stereo2depth/launch/: run_all.launch  uavControl.launch
src/stereo2depth/src/: stereo2depth_node.cpp  uavControl.cpp
src/uav_control/: CMakeLists.txt  package.xml
src/uav_control/app/: Deep.cpp  airsim_interface.cpp  airsim_interface.hpp  circleDetect.cpp  circleDetect.hpp  circle_detect_task.cpp  circle_detect_task.hpp  circle_detection.cpp  circle_detection.hpp  circle_travel_task.cpp  circle_travel_task.hpp  coex.cpp  coex.hpp  controller.cpp  controller.hpp  deep.cpp  deep.hpp  onnx.cpp  onnx.hpp  onnx2.cpp  onnx2.hpp  shan.cpp  uav_control_task.cpp  uav_control_task.hpp  yoloV5.cpp  yoloV5.hpp
src/uav_control/deep_image/StereoAlgorithms/: CMakeLists.txt
src/uav_control/deep_image/StereoAlgorithms/CREStereo/src/: CMakeLists.txt
src/uav_control/deep_image/StereoAlgorithms/FastACVNet_plus/src/: CMakeLists.txt  TRTFastACVNet_plus.cpp
src/uav_control/deep_image/StereoAlgorithms/FastACVNet_plus/test/: StereoCalibration.yml  StereoCalibrationUAV.yml  main.cpp
src/uav_control/deep_image/StereoAlgorithms/HitNet/: CMakeLists.txt
src/uav_control/deep_image/StereoAlgorithms/HitNet/src/: CMakeLists.txt
src/uav_control/deep_image/StereoAlgorithms/HitNet/test/: CMakeLists.txt  main.cpp
src/uav_control/deep_image/StereoAlgorithms/RAFTStereo/src/: CMakeLists.txt
src/uav_control/launch/: run_all.launch  run_rviz.launch  run_vins.launch  run_vins_local.launch
src/uav_control/math/: kalman_filter.hpp
src/uav_control/src/: rosNodeMain.cpp
src/yolov8/: CMakeLists.txt  yolov8.cpp
src/yolov8/include/: model.h  pose.h  postprocess.h  preprocess.h  utils.h  yolov8_.h
src/yolov8/src/: model.cpp  pose.cpp  postprocess.cpp  preprocess.cu  yolov8_.cpp
(+12 files in other folders)
